Changed styling to have spacing to reflect correct borders after mapContainer added

--- a/src/main/webapp/admin/stylesheet.css
+++ b/src/main/webapp/admin/stylesheet.css
@@ -162,8 +162,8 @@ body {
 }
 .canvasOverlay {
     position: absolute;
-    top: 25px;
-    left: 25px;
+    top: 0;
+    left: 0;
 }
 /**
  *
